# Twrminal

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  BEARINGS_ANALYTICS_v1.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TELEMETRY.md  TESTING_NOTES.md  TODO-archive-2026-04-22.md  TODO.md  UI_AUDIT.md  V0.2.0_SPEC.md  V1_FEATURE_AUDIT.md  pyproject.toml
.bearings/: manifest.toml  pending.toml  state.toml
.bearings/checks/: on_open.sh
.claude/: settings.json
.githooks-v1/: post-commit
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml
.v1-ship/: state.json
.v1-ship/closed/: feature-01.md  feature-03.md  feature-04.md  feature-06.md  feature-07.md  feature-10.md  feature-11.md  feature-12.md  feature-13.md  feature-14.md
.v1-ship/handoff/: successor-prompt.md
.v1-ship/runbooks/: ccw-worker.md  closer.md  executor.md  orchestrator.md  qa-loop.md  verifier.md
.v1-ship/verified/: feature-01.jsonl  feature-02.jsonl  feature-03.jsonl  feature-05.jsonl  feature-06.jsonl  feature-07.jsonl  feature-08.jsonl  feature-09.jsonl  feature-10.jsonl  feature-11.jsonl  feature-12.jsonl  feature-13.jsonl
config/: bearings-v1-diff-probe.service  bearings-v1-diff-probe.timer  bearings-v1-probe.service  bearings-v1-probe.timer  bearings-v1.service  bearings.service
config/allowlists/: knip.md
docs/: README.md  api.md  architecture-v1.md  concepts.md  deprecation-convention.md  menus-toml.md  model-routing-v1-spec.md  openapi.json  themes-design.md
docs/adr/: 0001-record-architecture-decisions.md  template.md
docs/behavior/: bearings-cli.md  chat.md  checklists.md  context-menus.md  keyboard-shortcuts.md  memories.md  modals.md  paired-chats.md  preferences.md  routing.md  sessions.md  themes.md  tool-output-streaming.md  vault.md
docs/dogfood/: issue-triage.md
docs/guide/: analytics.md  checklists.md  cli.md  getting-started.md  inspector.md  paired-chats.md  routing.md  sessions.md  settings.md  vault-and-memories.md
frontend/: .depcheckrc.json  README.md  eslint.config.js  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.ts  vitest.setup.ts
frontend/src/: app.css  app.html
frontend/src/lib/: agent.svelte.test.ts  agent.svelte.ts  api.ts  config.ts  input-history.test.ts  input-history.ts  linkify.test.ts  linkify.ts  render.test.ts  render.ts  sanitize.ts  sentinel.ts  turns.test.ts  turns.ts
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
frontend/static/: manifest.webmanifest
frontend/tests/: route-stubs.test.ts
scripts/: add_operation_ids.py  add_session_tags_priority.py  backfill_total_cost_usd.py  check_file_length.sh  check_schema_drift.py  check_version_alignment.py  consistency_lint.py  daily_probe.py  diff_probe.py  preflight_openapi_match.py  regen_openapi.py  stamp-frontend-version.mjs
src/bearings/: __init__.py  __main__.py  app.py  cli.py  config.py  errors.py  log.py  menus.py  metrics.py  server.py
src/bearings/agent/: analytics_capture.py  approval.py  approval_broker.py  auto_driver.py  auto_driver_runtime.py  bearings_mcp.py  checklist_sentinels.py  diag.py  dir_init_tool.py  event_fanout.py  events.py  fs.py  health.py  line_buffer.py  mcp_tools.py  options.py  paired_chats.py  persist.py  persistence.py  progress_ticker.py  prompt.py  prompt_assembler.py  prompt_dispatch.py  quota.py  registry.py  routing.py  runner.py  runner_subscribers.py  runner_types.py  sdk_loop.py  sdk_session_id.py  sentinel.py  session.py  session_assembly.py  session_bootstrap.py  session_store.py  sessions_broker.py  spawn_classifier.py  sub_invoke.py  system_prompt.py  (+8 more)
src/bearings/api/: auth.py  commands_scan.py  middleware.py  models.py  routes_artifacts.py  routes_checklists.py  routes_config.py  routes_diag.py  routes_fs.py  routes_health.py  routes_messages.py  routes_pending.py  routes_preferences.py  routes_reorg.py  routes_sessions.py  routes_shell.py  routes_spawn_classify.py  routes_spawn_from_reply.py  routes_tags.py  routes_templates.py  routes_uploads.py  routes_vault.py  routes_work_evidence.py  ws_agent.py  ws_sessions.py
src/bearings/bearings_dir/: __init__.py  auto_onboard.py  brief.py  contract.py  init.py  init_dir.py  io.py  lifecycle.py  on_open.py  onboarding.py  pending.py
src/bearings/cli/: app.py  gc.py  init.py  migrate.py  serve.py  todo.py
src/bearings/config/: constants.py  settings.py
src/bearings/db/: __init__.py  _artifacts.py  _auto_run.py  _checklists.py  _common.py  _messages.py  _preferences.py  _reorg.py  _sessions.py  _tags.py  _templates.py  _validators.py  analytics.py  auto_driver_runs.py  checklists.py  checkpoints.py  connection.py  import_bearings.py  memories.py  messages.py  migrate.py  migrations.py  preferences.py  reorg.py  routing.py  schema.sql  tags.py  (+6 more)
src/twrminal/: cli.py  server.py
tests/: conftest.py  test_agent_session.py  test_agent_tags_memory.py  test_analytics_capture.py  test_analytics_routes.py  test_analytics_schema.py  test_app.py  test_approval.py  test_approval_broker.py  test_approvals_route.py  test_auth.py  test_auto_driver.py  test_auto_driver_integration.py  test_auto_driver_persistence.py  test_auto_driver_unit.py  test_bearings_dir_auto_onboard.py  test_bearings_dir_brief.py  test_bearings_dir_contract.py  test_bearings_dir_init_dir.py  test_bearings_dir_io.py  test_bearings_dir_lifecycle.py  test_bearings_dir_on_open.py  test_bearings_dir_onboarding.py  test_bearings_dir_pending.py  test_bearings_mcp_bash.py  test_bearings_mcp_dir_init.py  test_bearings_mcp_get_tool_output.py  test_bootstrap.py  test_broadcaster_ccw3.py  test_checklist_sentinels.py  test_checklists.py  test_checklists_autonomous.py  test_checklists_db.py  test_checkpoints_api.py  test_cli_gc.py  test_cli_init_migrate.py  test_cli_send.py  test_cli_window.py  test_close_session_tool.py  test_close_session_tool_session_isolation.py  (+115 more)
tests/services/: test_sessions.py
tests/web/: conftest.py  test_auth.py  test_health.py  test_sessions_crud.py  test_sessions_negative.py
(+516 files in other folders)
