[project]
name = "bearings"
version = "0.17.3"
description = "Localhost web UI for Claude Code agent sessions."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Dave Hennigan" }]
keywords = ["claude", "agent", "web-ui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "websockets>=13",
    "claude-agent-sdk>=0.1.66,<0.2",
    "pydantic>=2.8",
    "pydantic-settings>=2.5",
    "tomli-w>=1.0",
    "prometheus-client>=0.21",
    "aiosqlite>=0.20",
    "orjson>=3.9",
    "python-multipart>=0.0.9",
]

[project.scripts]
bearings = "bearings.cli:main"

[project.urls]
Repository = "https://github.com/Beryndil/Bearings"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.8",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bearings"]

# Force the built frontend bundle into the wheel. `src/bearings/web/dist/*`
# is gitignored (the generated SvelteKit output is a build artifact), so
# hatch's default VCS-aware file discovery skips it. Without this
# directive, `pip install bearings` ships a server with no UI and the
# root route 404s. `npm run build` in `frontend/` must run before
# `uv build` so the directory is populated.
[tool.hatch.build.targets.wheel.force-include]
"src/bearings/web/dist" = "bearings/web/dist"

# Mirror the same include into the sdist so `pip install` from source
# (e.g. a GitHub tarball) produces a working install as long as the
# frontend bundle was built before the sdist was packaged.
[tool.hatch.build.targets.sdist.force-include]
"src/bearings/web/dist" = "src/bearings/web/dist"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["bearings"]
mypy_path = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
