[project]
name = "bearings"
version = "0.18.0.dev0"
description = "Localhost web UI that streams Claude Code agent sessions (v1 rebuild)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Beryndil", email = "dwhennigan@gmail.com" }]

dependencies = [
    # Pinned to compatible-release of the SDK current as of v1 rebuild bootstrap (2026-04-28).
    # Compatible-release allows 0.1.x patch updates but not 0.2+ surface changes.
    "claude-agent-sdk~=0.1.69",
    # Web framework + ASGI server for the localhost UI backend (port 8788).
    "fastapi~=0.115",
    "uvicorn[standard]~=0.32",
    # Async SQLite driver for the consolidated DB (item 0.4 will define schema).
    "aiosqlite~=0.20",
    # Settings / config validation (item 0.5).
    "pydantic~=2.9",
    "pydantic-settings~=2.6",
    # TOML loading for config files (Python 3.12+ has tomllib in stdlib for read; tomli-w for write).
    "tomli-w~=1.0",
    # Prometheus exposition for ``GET /metrics`` (item 1.10; arch §1.1.7).
    "prometheus-client~=0.21",
    # Multipart/form-data parsing for ``POST /api/uploads`` (item 1.10; arch
    # §1.1.5 ``web/routes/uploads.py``). FastAPI's ``UploadFile`` requires
    # this dep at request-parse time; without it FastAPI raises a clear
    # runtime error pointing at python-multipart.
    "python-multipart~=0.0.18",
]

[project.optional-dependencies]
dev = [
    # Lint + format (single tool replaces flake8/black/isort).
    # Pinned exactly to match `.pre-commit-config.yaml` ruff-pre-commit rev — the
    # two MUST stay in lockstep (ruff's formatter rules drift across minor
    # versions, so a `~=` compatible-release pin would silently mask gate
    # failures any time uv resolves a newer minor than the pre-commit hook).
    "ruff==0.15.12",
    # Strict type-checking — no Any escape hatches per coding-standards.
    "mypy~=1.13",
    # Test runner + async support for FastAPI/aiosqlite.
    "pytest~=8.3",
    "pytest-asyncio~=0.24",
    "pytest-cov~=5.0",
    # Dead-code finder; allowlist at config/allowlists/vulture.txt suppresses dynamic-dispatch false positives.
    "vulture~=2.13",
    # Cyclomatic complexity gate (functions ≤ 10 per coding-standards).
    "radon~=6.0",
    # Docstring coverage on public API.
    "interrogate~=1.7",
    # Typo finder.
    "codespell~=2.3",
    # CVE scanner for declared deps (no high/critical per tooling matrix).
    "pip-audit~=2.7",
    # pre-commit driver itself.
    "pre-commit~=4.0",
]

[project.scripts]
bearings = "bearings.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bearings"]

# ---------------------------------------------------------------------------
# Tool configurations
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
# Enable a strict-but-pragmatic ruleset. E/W = pycodestyle, F = pyflakes,
# I = isort, B = bugbear, UP = pyupgrade, S = bandit-lite security,
# SIM = simplify, RUF = ruff-native, ASYNC = async correctness.
select = ["E", "W", "F", "I", "B", "UP", "SIM", "RUF", "ASYNC"]
ignore = [
    # Allow assert in test code; codebase uses asserts for test helpers.
    "S101",
]

[tool.ruff.lint.per-file-ignores]
# Tests routinely use long expressions, magic numbers, and broad fixtures.
"tests/**/*.py" = ["S", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
python_version = "3.12"
strict = true
# ``scripts/`` is included so cross-system tooling (the consistency
# lint script from item 3.1) gets the same strict-type treatment as
# production code. mypy silently ignores the non-``.py`` shell scripts
# in that directory.
files = ["src", "tests", "scripts"]
# ``scripts/`` is a flat package-less directory; without an explicit
# search-path entry, ``TYPE_CHECKING`` imports in script-under-test
# tests (``test_cutover_smoke.py``, ``test_diff_probe.py``) report
# ``import-not-found`` even though the runtime importlib-spec-loader
# resolves them. Pinning ``mypy_path`` makes mypy's resolver agree
# with runtime.
mypy_path = "scripts"
warn_unused_configs = true
warn_unreachable = true
disallow_any_explicit = true
disallow_any_generics = true
no_implicit_reexport = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
# Allow tests to use untyped fixtures + monkeypatching idioms without ceremony.
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
# 80% coverage gate enforced in CI via --cov-fail-under, not here, so local
# pytest runs without --cov stay fast.

[tool.coverage.run]
branch = true
source = ["src/bearings"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]

[tool.vulture]
# Ignore well-known patterns; full allowlist with justifications lives at
# config/allowlists/vulture.txt and is loaded via the pre-commit args.
min_confidence = 80
paths = ["src", "tests"]
exclude = ["tests/fixtures/*"]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-private = true
ignore-semiprivate = false
ignore-nested-functions = true
ignore-module = false
fail-under = 80
exclude = ["tests", "scripts"]
verbose = 1

[tool.codespell]
# Skip generated artefacts, vendored caches, and the spec doc (deliberate
# spec-vocabulary). The .venv / .git / cache exclusions are critical: without
# them codespell scans installed third-party packages and fails on their
# typos which we cannot fix.
skip = "*.lock,*.svg,*.min.*,docs/model-routing-v1-spec.md,docs/openapi.json,*/node_modules/*,*/.svelte-kit/*,*/package-lock.json,frontend/node_modules,frontend/.svelte-kit,frontend/package-lock.json,src/bearings/web/dist,src/bearings/web/dist/*,.venv,.git,.mypy_cache,.ruff_cache,.pytest_cache,htmlcov,dist,build"
# Allowlist intentional Pydantic-style ``*In`` request shape names
# (``PromptIn`` ↦ "prompt in" / "prompting" false positives) — the
# convention is established across ``web/models/*.py`` and the
# alternatives (``PromptInput`` / ``PromptRequest``) are noisier than
# the typo risk.
ignore-words-list = "promptin"
check-filenames = true
check-hidden = true
